--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@ footer a {
 
 section {
     padding: 60px;
+    
 }
 
 /* Hero Style Start */
@@ -76,5 +77,17 @@ section {
     height: 600px;
     background-size: cover;
     background-position: center;
+    position: relative;
 }
 /* Hero Style End */
+
+.hero-form {
+    border: 3px solid #024e76;
+    background-color: #fce138;
+    padding: 20px;
+    width: 500px;
+    color: #024e76;
+    position: absolute;
+    bottom: 120px;
+    right: 140px; 
+}
