--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,14 +232,15 @@ section {
     line-height: 1.3; 
 }
 
-.section-title {
-    font-size: 55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    margin-bottom: 35px;
-    color:#024e76;
+.text-left {
+    text-align: left;
+
 }
+
+.text-right {
+    text-align: right;
+}
+
 
 .contact {
     text-align: center;
