--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,10 +142,6 @@ section {
     font-size: 16px;
 }
 
-.intro {
-    text-align:center;
-}
-
 
 .intro p {
     line-height: 1.7;
@@ -153,10 +149,10 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align:center;
     background: #fce138;
 }
 
@@ -164,11 +160,11 @@ section {
 .section-title {
     font-size: 55px;
     color:#024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
-
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -203,9 +199,6 @@ section {
     font-size: 38px;
 }
 
-.trainers {
-    text-align: center;
-}
 
 .trainer {
     width: 900px;
@@ -252,6 +245,11 @@ section {
     line-height: 1.3; 
 }
 
+.flex-row {
+    display: flex;
+}
+
+
 .text-left {
     text-align: left;
 
@@ -261,9 +259,7 @@ section {
     text-align: right;
 }
 
-
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
