--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -89,6 +89,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -97,7 +98,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -150,7 +151,7 @@ section {
 
 /* Section Title style starts */
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color:#024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -369,4 +370,9 @@ section {
 
 .flex-row {
     display: flex;
+}
+
+/* Media Query for smaller desktop screens and smaller */
+@media screen and (max-width: 980px) {
+
 }
