--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
 /* Main style */
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
+}
 * {
     margin: 0;
     padding: 0;
@@ -6,13 +11,13 @@
 }
 
 body {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
 }
 /* Header / Nav Bar style start*/
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -30,14 +35,14 @@ header {
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 header a { 
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 header nav {
@@ -60,8 +65,8 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
@@ -70,7 +75,7 @@ header nav ul li a:hover {
 
 /* Footer style start */
 footer {
-    background:#fce138;
+    background:var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -79,7 +84,7 @@ footer {
 }
 
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -90,7 +95,7 @@ footer div {
 }
 
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 /* Footer style ends */
 
@@ -124,16 +129,16 @@ section {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 
 .hero-form {
-    border: 3px solid #024e76;
+    border: 3px solid var(--secondary-color);
     background-color: rgba(252,225,56, 0.8);
     padding: 20px;
-    color: #024e76; 
+    color:var(--secondary-color); 
     width: 40%;
     margin: 3.5%;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
@@ -150,11 +155,11 @@ section {
 }
 
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
@@ -171,8 +176,8 @@ section {
 }
 
 .hero-form button {
-    color:#fce138;
-    background-color:#024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -180,7 +185,7 @@ section {
 }
 
 .hero-form button:hover {
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
 }
 
 .checkbox-wrapper input, .radio-wrapper input {
@@ -199,7 +204,7 @@ section {
     height: 20px;
     width: 20px;
     background: rgba(255,255,255, 0.75);
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     position: absolute;
     top: -4px;
     left: -30px;
@@ -214,19 +219,19 @@ section {
     width: 20px;
     height:20px;
     border-radius: 50%;
-    background: #024e76;
+    background: var(--secondary-color);
     position: absolute;
     left: -29px;
     top: -3px;
-    background-image: radial-gradient(circle,#39a6b2,#024e76);
+    background-image: radial-gradient(circle, var(--tertiary-color),var(--secondary-color));
 }
 
 .checkbox-wrapper label::after {
     content: "";
     height: 6px;
     width: 14px;
-    border-left: 2px solid #024e76;
-    border-bottom: 2px solid #024e76;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
     position: absolute;
     left: -26px;
     top: 1px;
@@ -247,7 +252,7 @@ section {
 /* Section Title style starts */
 .section-title {
     font-size: 48px;
-    color:#024e76;
+    color:var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -256,11 +261,11 @@ section {
 }
 
 .primary-border {
-    border-color:#fce138;
+    border-color:var(--primary-color);
 }
 
 .secondary-border {
-    border-color: #39a6b2
+    border-color: var(--tertiary-color)
 }
 /* Section Title style ends */
 
@@ -268,7 +273,7 @@ section {
 
 .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
@@ -281,7 +286,7 @@ section {
 /*What You Do Style starts */
 
 .steps {
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .step {
@@ -295,11 +300,11 @@ section {
 }
 
 .step:not(:last-child) {
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--tertiary-color);
 }
 
 .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
 }
@@ -317,14 +322,14 @@ section {
 }
 
 .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
 }
 
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 .step-text {
@@ -342,8 +347,8 @@ section {
 
 .trainer {
     margin: 20px;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
 }
 
@@ -392,11 +397,11 @@ section {
 
 /* Reach Out Styles start */
 .contact {
-    background: #024e76;
+    background: var(--secondary-color);
 }
 
 .contact h2 {
-    color:#fce138;
+    color: var(--primary-color);
 }
 
 .contact-info iframe {
@@ -418,7 +423,7 @@ section {
     color: white;
 }
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
 
@@ -430,15 +435,15 @@ section {
 }
 
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -454,8 +459,8 @@ section {
 .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
@@ -463,8 +468,8 @@ section {
 }
 
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 /* Reach Out Styles End */
 
